--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@supabase/supabase-js": "^2.43.2",
     "@tanstack/react-query": "^5.36.2",
     "axios": "^1.6.8",
+    "body-scroll-lock": "^4.0.0-beta.0",
     "formik": "^2.4.6",
     "lodash-es": "^4.17.21",
     "next": "14.2.3",
@@ -28,6 +29,7 @@
   },
   "devDependencies": {
     "@channel.io/eslint-config": "^2.0.7",
+    "@types/body-scroll-lock": "^3.1.2",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^20",
     "@types/react": "^18",
