--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lodash-es": "^4.17.21",
     "next": "14.2.3",
     "normalize.css": "^8.0.1",
+    "openai": "^4.47.1",
     "react": "^18",
     "react-dom": "^18",
     "styled-components": "^6.1.11"
