feat: 감정 수치를 기록하는 기능을 추가

--- a/.env.template
+++ b/.env.template
@@ -6,3 +6,8 @@ JWT_SECRET=""
 API_HOST="http://localhost:3000"
 
 OPENAI_API_KEY=""
+
+GOOGLE_CLIENT_ID=""
+GOOGLE_CLIENT_EMAIL=""
+GOOGLE_PROJECT_ID=""
+GOOGLE_PRIVATE_KEY=""
