--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@channel.io/bezier-icons": "^0.24.0",
     "@channel.io/bezier-react": "^2.0.5",
     "@ebay/nice-modal-react": "^1.2.13",
+    "@google-cloud/language": "^6.3.0",
     "@supabase/supabase-js": "^2.43.2",
     "@tanstack/react-query": "^5.36.2",
     "axios": "^1.6.8",
     "body-scroll-lock": "^4.0.0-beta.0",
     "formik": "^2.4.6",
+    "google-auth-library": "^9.10.0",
     "lodash-es": "^4.17.21",
     "next": "14.2.3",
     "normalize.css": "^8.0.1",
